// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render absences Absence with work note Note when will not work 1`] = `
<div
  className="abc-gap"
  data-lego="react"
  style={Object {}}
>
  <icon
    glyph="suitcase"
    key="icon"
    mix={
      Object {
        "block": "abc-gap",
        "elem": "icon",
      }
    }
  />
  1548979200000,1550102400000,true,false,words,true abc-gap:trip (abc-gap:will-not-work)
</div>
`;

exports[`Should render absences Absence with work note Note when will work 1`] = `
<div
  className="abc-gap"
  data-lego="react"
  style={Object {}}
>
  <icon
    glyph="stethoscope"
    key="icon"
    mix={
      Object {
        "block": "abc-gap",
        "elem": "icon",
      }
    }
  />
  1548979200000,1550102400000,true,false,words,true abc-gap:illness (abc-gap:will-work)
</div>
`;

exports[`Should render absences Should make interval for full-day gap non inclusive 1`] = `
<div
  className="abc-gap"
  data-lego="react"
  style={Object {}}
>
  <icon
    glyph="home"
    key="icon"
    mix={
      Object {
        "block": "abc-gap",
        "elem": "icon",
      }
    }
  />
  1548979200000,1550102400000,false,false,words,true abc-gap:absence
</div>
`;

exports[`Should render absences Should render absence 1`] = `
<div
  className="abc-gap"
  data-lego="react"
  style={Object {}}
>
  <icon
    glyph="home"
    key="icon"
    mix={
      Object {
        "block": "abc-gap",
        "elem": "icon",
      }
    }
  />
  1548979200000,1550102400000,true,false,words,true abc-gap:absence
</div>
`;
